--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "qrcode-terminal": "^0.12.0",
     "yt-search":"2.12.1",
     "api-dylux":"1.8.5",
-    "mongoose":"8.9.4"
+    "mongoose":"8.9.4",
+    "@dark-yasiya/yt-dl.js": "latest"
   }
 }
