--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "yt-search":"2.12.1",
     "api-dylux":"1.8.5",
     "mongoose":"8.9.4",
+    "@sl-code-lords/movie-api":"1.0.0",
+    "pixaldrain-sinhalasub": "git+https://github.com/DarkMakerofc/pixaldrain-sinhalasub.git",
     "@dark-yasiya/yt-dl.js": "latest"
   }
 }
