--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mime-types": "latest",
     "mrnima-moviedl":"latest",
     "systeminformation":"^5.21.11",
-    "os": "^0.1.2"
+    "os": "^0.1.2",
+    "wa-sticker-formatter": "4.4.4"
   }
 }
